# dynamic-cpp-example

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  lib.cpp  vertexbuffer.h
src/app/: CMakeLists.txt  host-app.cpp  plattformlayer.cpp  plattformlayer.h
src/cmake/: FindBox2D.cmake  FindGLEW.cmake  FindSDL2.cmake
src/share/: gamestate.h
